# StockMarket-Simulator

./: .gitignore  BUILD.md  README.md  main.c
.github/workflows/: ci.yml
backend-c/: CMakeLists.txt
backend-c/include/: engine.h  market_maker.h  math_model.h  network.h  order_book.h  protocol.h
backend-c/src/: engine.c  main.c  market_maker.c  math_model.c  network.c  order_book.c  protocol.c
backend-c/tests/: test_gbm.c  test_matching.c  test_order_book.c  test_protocol.c
frontend-python/: main.py  requirements.txt
frontend-python/charts/: __init__.py  candlestick.py  orderbook_depth.py
frontend-python/core/: __init__.py  socket_client.py
frontend-python/ui/: __init__.py  main_window.py
src/: main.c
